syntax = "proto3";

option csharp_namespace = "Rpg.Grpc";

package example;

service SvcMath {
	rpc Add(ReqAdd) returns (ResAdd);
}

message ReqAdd {
	int32 x = 1;
	int32 y = 2;
}

message ResAdd {
	int32 result = 1;
}